--- a/images/php/app/.env
+++ b/images/php/app/.env
@@ -8,17 +8,17 @@ APP_TIMEZONE=UTC
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
-DB_CONNECTION=sqlite
-#DB_HOST=127.0.0.1
-#DB_PORT=3306
-#DB_DATABASE=homestead
-#DB_USERNAME=homestead
-#DB_PASSWORD=secret
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=apis
+DB_USERNAME=root
+DB_PASSWORD=pass
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 
 LOGINS_SERVICE_BASE_URL=localhost:8000
 BILLINGS_SERVICE_BASE_URL=localhost:8001
-CATALOGUES_SERVICE_BASE_URL=localhost:8002
+CATALOGUES_SERVICE_BASE_URL=35.223.117.205:80
 VIDEOS_SERVICE_BASE_URL=localhost:8003
