--- a/images/php/app/.env
+++ b/images/php/app/.env
@@ -2,7 +2,7 @@ APP_NAME=Lumen
 APP_ENV=local
 APP_KEY=cttIM97ty5Nq741PB5nZlj1eIhJGqwnr
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://35.188.197.2
 APP_TIMEZONE=UTC
 
 LOG_CHANNEL=stack
